# Ark-CLI

./: .gitignore  README.md  config.json  pnpm-lock.yaml
assistant-core/: Cargo.toml
assistant-core/src/: cache.rs  config.rs  file_index.rs  file_router.rs  info_dump.rs  lib.rs  main.rs  memory.rs  pdf.rs  router.rs
assistant-core/src/skills/: system.rs
frontend/: index.html  package.json  pnpm-lock.yaml  site.config.js  vite.config.js
frontend/src/: main.js  style.css
frontend/src/bubble/: index.html  main.js
src/: index.html  main.js
