[package]
name = "ark"
version = "0.1.0"
edition = "2021"

# We build BOTH a library (for Tauri) and a CLI binary (optional).
[lib]
name = "assistant_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"
lru = "0.12"
once_cell = "1.18"
walkdir = "2.5.0"
anyhow = "1.0.100"
dirs = "5"
